<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="8dp"
    tools:context=".PostPage">


    <RelativeLayout
        android:id="@+id/post_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_profile_pic"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/prof_pic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:contentDescription="@string/profile_pic" />

        <LinearLayout
            android:id="@+id/profile_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/user_profile_pic"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_acc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="@string/group_name" />

            <TextView
                android:id="@+id/last_post_modified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:textColor="#4D000000"
                tools:text="@string/time_counter" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/tools_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="#0000"
            android:contentDescription="@string/more_tools"
            android:foregroundGravity="center"
            android:src="@drawable/more_tools" />

    </RelativeLayout>

    <TextView
        android:id="@+id/post_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_info"
        tools:text="@string/post_caption" />

    <ImageView
        android:id="@+id/post_pic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/post_pic"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_caption"
        tools:src="@drawable/post_pic" />

    <RelativeLayout
        android:id="@+id/retch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/post_pic">

        <LinearLayout
            android:id="@+id/reacts_cec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/like_logo"
                android:src="@drawable/ic_like" />

            <TextView
                android:id="@+id/like_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/grey"
                android:textSize="13sp"
                tools:text="@string/likes_counter" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/commet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/share">
            <TextView
                android:id="@+id/comment_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/grey"
                tools:text="5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments_counter"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/grey"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">
            <TextView
                android:id="@+id/share_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/grey"
                tools:text="2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_counter"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/grey"/>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/break1"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="2dp"
        android:background="#e4e4e4"
        android:contentDescription="@string/break_line"
        app:layout_constraintTop_toBottomOf="@id/retch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/break1">


        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:contentDescription="@string/like_button"
            android:src="@drawable/like_button" />


        <ImageButton
            android:id="@+id/comment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:contentDescription="@string/comment_button"
            android:src="@drawable/comment_button" />


        <ImageButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:contentDescription="@string/share_button"
            android:src="@drawable/share_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>